folio positioning sorted

--- a/css/main.css
+++ b/css/main.css
@@ -1795,7 +1795,7 @@ header .logo a {
 	padding-bottom: 12rem;
 }
 #portfolio .folio-item {
-	padding: 0;
+	padding: 15px;
 	position: relative;
 	overflow: hidden;
 }
