minor bug fixing

--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,7 @@
 /**
  * =================================================================== 
  *
- *  Kards v1.0 Base Stylesheet
- *  url: styleshout.com
- *  03-01-2016
+ *  v1.0 Base Stylesheet
  *  ------------------------------------------------------------------
  *  TOC:
  *  01. reset
