--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 /**
  * =================================================================== 
  *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
+ *  v1.0 Main Stylesheet
  *  ------------------------------------------------------------------
  *  TOC:
  *  01. webfonts and iconfonts
@@ -20,7 +18,6 @@
  *  12. resume
  *  13. portfolio
  *  14. call-to-action section
- *  15. services
  *  16. stats
  *  17. contact
  *  18. footer
