--- a/css/vendor.css
+++ b/css/vendor.css
@@ -1,20 +1,13 @@
 /**
  * =================================================================== 
  *
- *  Kards v1.0 Vendor/Third Party CSS 
- *  url: styleshout.com
- *  03-01-2016
+ *  v1.0 Vendor/Third Party CSS 
  *  ------------------------------------------------------------------
  *  TOC:
  *  01. Core Owl Carousel CSS File
  *  02. Magnific Popup CSS
  *
  * =================================================================== 
- */
-
-/* 
- *  01. Core Owl Carousel CSS File
- *	 v1.3.3
  */
 
 /* clearfix */
