--- a/css/main.css
+++ b/css/main.css
@@ -1017,7 +1017,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ------------------------------------------------------------------- 
  */
 .grey-section {
-	background: #ebebeb;
+	background: #ebebeb !important;
 }
 .grey-section p.lead {
 	color: #7d7d7d;
